# GraphEmbeddings

./: .gitignore  AbstractLattice.h  AuxiliaryRoutinesForNauty.cpp  AuxiliaryRoutinesForNauty.h  CMakeLists.txt  CubicLattice.cpp  CubicLattice.h  CubicLatticeCanonicalizor.cpp  CubicLatticeCanonicalizor.h  Embed.cpp  Executable.cpp  GraphContainer.cpp  GraphContainer.h  GraphEmbedder.cpp  GraphEmbedder.h  GraphGenerator.cpp  GraphGenerator.h  GraphGeneratorNauty.cpp  GraphGeneratorNauty.h  MiscellaneousRoutines.cpp  MiscellaneousRoutines.h  PureGaugeweight.cpp  PureGaugeweight.h  README.md  SquareLattice.cpp  SquareLattice.h  SubDiagramGenerator.cpp  SubDiagramGenerator.h  TestCubicLatticeCanonicalizor.cpp  TestGraphWeight.cpp  TestPowerSet.cpp  TestZCluster.cpp  TriangularLattice.cpp  TriangularLattice.h  VertexEmbedList.cpp  VertexEmbedList.h  ZClusterPureGauge.cpp  ZClusterPureGauge.h
Graph/: AbstractLattice.h  AbstractZCluster.h  AuxiliaryRoutinesForGINAC.cpp  AuxiliaryRoutinesForGINAC.h  AuxiliaryRoutinesForNauty.cpp  AuxiliaryRoutinesForNauty.h  CMakeLists.txt  CanonicalGraphManager.cpp  CanonicalGraphManager.h  CorrelatorParameters.h  CubicLattice.cpp  CubicLatticeCanonicalizor.cpp  CubicLatticeCanonicalizor.h  ExternalPolyakovLoop.h  GenericConnectedGraph.cpp  GenericConnectedGraph.h  GraphContainer.cpp  GraphContainer.h  GraphEmbedder.cpp  GraphEmbedder.h  GraphGeneratorNauty.cpp  GraphGeneratorNauty.h  MiscellaneousRoutines.cpp  MiscellaneousRoutines.h  MyLambdaPolynomial.cpp  MyLambdaPolynomial.h  PureGaugeWeight.cpp  PureGaugeWeight.h  PureGaugeWeightOld.cpp  PureGaugeWeightOld.h  PureGaugeweight.cpp  PureGaugeweight.h  SquareLattice.cpp  SquareLattice.h  StaticQuarkWeight.cpp  StaticQuarkWeight.h  SubDiagramGenerator.cpp  SubDiagramGenerator.h  TwoPointCorrelator.cpp  TwoPointCorrelator.h  (+15 more)
Programs/: Embed.cpp  GenerateNauty.cpp
Tests/: Executable.cpp  TestCorrelator.cpp  TestCubicLatticeCanonicalizor.cpp  TestDenseNauty.cpp  TestGinacPolynomial.cpp  TestGraphWeight.cpp  TestPowerSet.cpp  TestRecursionXi.cpp  TestZCluster.cpp  nauty_test.cpp
cmake/Modules/: FindCLN.cmake
